Finished work on header and banner blocks

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="container">
         <div class="wrapper">
           <div class="logo">
-            <img src="./images/mit-logo.svg" alt="mit-logo" />
+            <img src="./images/mit-logo-red.png" alt="mit logo" />
           </div>
           <nav class="nav">
             <ul class="nav__list">
@@ -38,14 +38,22 @@
     <section id="banner">
       <div class="container">
         <div class="wrapper banner">
-          <h1 class="banner__title">Massachusetts Institute of Technology</h1>
-          <h3 class="banner__subtext">
-            The MIT community is driven by a shared purpose: to make a better
-            world through education, research, and innovation. We are fun and
-            quirky, elite but not elitist, inventive and artistic, obsessed with
-            numbers, and welcoming to talented people regardless of where they
-            come from.
-          </h3>
+          <div class="banner__text">
+            <h1 class="banner__title">Massachusetts Institute of Technology</h1>
+            <h3 class="banner__subtext">
+              The MIT community is driven by a shared purpose: to make a better
+              world through education, research, and innovation. We are fun and
+              quirky, elite but not elitist, inventive and artistic, obsessed
+              with numbers, and welcoming to talented people regardless of where
+              they come from.
+            </h3>
+            <a href="#about">
+              <button class="btn btn-banner">About us</button>
+            </a>
+          </div>
+          <div class="banner__image">
+            <img src="./images/banner-light.jpg" alt="banner image" />
+          </div>
         </div>
       </div>
     </section>
