Done landing page for MIT

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <script
-      src="https://kit.fontawesome.com/3fa43f8601.js"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alike&display=swap"
+      rel="stylesheet"
+    />
     <title>MIT - Massachusetts Institute of Technology</title>
   </head>
   <body>
@@ -26,7 +28,7 @@
           </div>
           <nav class="nav">
             <ul class="nav__list">
-              <li class="nav__item"><a href="#main">Home</a></li>
+              <li class="nav__item"><a href="#about">About us</a></li>
               <li class="nav__item"><a href="#entrance">Entrance</a></li>
               <li class="nav__item"><a href="#studenLife">Student life</a></li>
               <li class="nav__item"><a href="#contacts">Contacts</a></li>
@@ -54,6 +56,193 @@
           <div class="banner__image">
             <img src="./images/banner-light.jpg" alt="banner image" />
           </div>
+        </div>
+      </div>
+    </section>
+    <a href="" class="anchor" id="about"></a>
+    <section id="about">
+      <div class="container">
+        <div class="wrapper about">
+          <div class="about__info">
+            <h2 class="about__title">About us</h2>
+            <p class="about__text">
+              Founded to accelerate the nation’s industrial revolution, MIT is
+              profoundly American. With ingenuity and drive, our graduates have
+              invented fundamental technologies, launched new industries, and
+              created millions of American jobs. At the same time, and without
+              the slightest sense of contradiction, MIT is profoundly global.
+            </p>
+            <p class="about__text">
+              Our community gains tremendous strength as a magnet for talent
+              from around the world. Through teaching, research, and innovation,
+              MIT’s exceptional community pursues its mission of service to the
+              nation and the world.
+            </p>
+          </div>
+          <div class="about__info">
+            <p class="about__text">
+              <span>The mission of MIT</span> is to advance knowledge and
+              educate students in science, technology, and other areas of
+              scholarship that will best serve the nation and the world in the
+              21st century. The Institute is committed to generating,
+              disseminating, and preserving knowledge, and to working with
+              others to bring this knowledge to bear on the world’s great
+              challenges. MIT is dedicated to providing its students with an
+              education that combines rigorous academic study and the excitement
+              of discovery with the support and intellectual stimulation of a
+              diverse campus community. We seek to develop in each member of the
+              MIT community the ability and passion to work wisely, creatively,
+              and effectively for the betterment of humankind.
+            </p>
+          </div>
+          <div class="about__info values">
+            <div class="about__values">
+              <h5 class="values__title">Excellence and Curiosity</h5>
+              <p class="values__text">
+                We strive for the highest standards of integrity, and
+                intellectual and creative excellence. We seek new knowledge and
+                practical impact, in service to the nation and the world. We
+                prize originality, ingenuity, honesty, and boldness. We love
+                discovery and exploration, invention and making. We delight in
+                the full spectrum of human wisdom. Drawing strength from MIT’s
+                distinctive roots, we believe in learning by doing, and we blur
+                the boundaries between disciplines as we seek to solve hard
+                problems. Embracing the unconventional, we welcome quirkiness,
+                nerdiness, creative irreverence, and play. We accept the risk of
+                failing as a rung on the ladder of growth. With fearless
+                curiosity, we question our assumptions, look outward, and learn
+                from others.
+              </p>
+            </div>
+            <div class="about__values">
+              <h5 class="values__title">Openness and Respect</h5>
+              <p class="values__text">
+                We champion the open sharing of information and ideas. Because
+                learning is nourished by a diversity of views, we cherish free
+                expression, debate, and dialogue in pursuit of truth – and we
+                commit to using these tools with respect for each other and our
+                community. We strive to be transparent and worthy of each
+                other’s trust – and we challenge ourselves to face difficult
+                facts, speak plainly about failings in our systems, and work to
+                overcome them. We take special care not to overlook bad behavior
+                or disrespect on the grounds of great accomplishment, talent, or
+                power.
+              </p>
+            </div>
+            <div class="about__values">
+              <h5 class="values__title">Belonging and Community</h5>
+              <p class="values__text">
+                We strive to make our community a humane and welcoming place
+                where people from a diverse range of backgrounds can grow and
+                thrive – and where we all feel that we belong. We know that
+                attending to our own and each other’s wellbeing in mind, body,
+                and spirit is essential. We believe that decency, kindness,
+                respect, and compassion for each other as human beings are signs
+                of strength. Valuing potential over pedigree, we know that
+                talent and good ideas can come from anywhere – and we value one
+                another’s contributions in every role. Together we possess
+                uncommon strengths, and we shoulder the responsibility to use
+                them with wisdom and care for humanity and the natural world.
+                MIT’s MindHandHeart office has been charged with implementing
+                the statement's intent and language across the Institute.
+                Resources for the MIT community can be found at Supporting MIT
+                Values.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <a href="" class="anchor" id="entrance"></a>
+    <section id="entrance">
+      <div class="container">
+        <div class="wrapper entrance">
+          <h2 class="about__title">Entrance</h2>
+          <ul class="entrance__list">
+            <li class="entrance__item">
+              <div class="entrance__wrapper">
+                <span class="entrance__number">1</span>Near-perfect high school
+                GPA
+              </div>
+            </li>
+            <li class="entrance__item">
+              <div class="entrance__wrapper">
+                <span class="entrance__number">2</span>Top scores on your ACT or
+                SAT
+              </div>
+            </li>
+            <li class="entrance__item">
+              <div class="entrance__wrapper">
+                <span class="entrance__number">3</span>
+                Types of extracurricular activities that allow you to
+                demonstrate your commitment and leadership abilities
+              </div>
+            </li>
+            <li class="entrance__item">
+              <div class="entrance__wrapper">
+                <span class="entrance__number">4</span>
+                Write essay that tells a compelling story about you and your
+                thoughts
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section id="studentLife">
+      <div class="container">
+        <div class="wrapper life">
+          <h2 class="about__title">Student life</h2>
+          <p class="life__text">
+            MIT’s collaborative, hands-on, curiosity-driven ethos extends across
+            our campus — and beyond. On the stage or field, in makerspaces and
+            living communities, MIT is where brilliant, committed, creative
+            people come together to learn, work, live, and play. All the
+            elements are here to cultivate students’ personal and intellectual
+            growth, fostering the whole student.
+          </p>
+          <div class="subtext">
+            <p class="life__subtext">
+              With 500+ student organizations (chocolate science, anyone?),
+              nearly 40 Greek-letter and independent living groups, chaplains
+              for more than 20 faith traditions, and a commitment to diversity
+              and inclusion, student life at MIT offers a welcoming place for
+              everyone. To complement their academics and research, students
+              choose their own extracurricular adventures, from a spectacular
+              array of ways to participate in music, dance, and sports to dozens
+              of groups that savor and celebrate cultures from around the world.
+              To help students navigate challenges, MIT offers a strong support
+              network (bolstered by occasional visits from puppies, pigs, and
+              pygmy goats).
+            </p>
+            <div class="subtext__img">
+              <img src="./images/mascot.jpg" alt="mascot MITs" />
+            </div>
+          </div>
+          <div class="gallery">
+            <img src="./images/bridge.jpg" alt="bridge" />
+            <img src="./images/dance-battle.jpg" alt="dance-battle" />
+            <img src="./images/hub.jpeg" alt="" class="" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="contacts">
+      <div class="container">
+        <div class="wrapper contacts">
+          <h2 class="about__title contacts">Contacts</h2>
+          <p class="contacts__text">
+            Massachusetts Institute of Technology <br />
+            77 Massachusetts Avenue Cambridge, MA 02139, USA
+            <br />
+            <br />
+            617-253-1000 <br />
+            TDD/TTY, use TRS (711)
+          </p>
+          <p class="contacts__text">
+            For questions about applying to MIT, visit the Admissions Office or
+            email admissions@mit.edu.
+          </p>
         </div>
       </div>
     </section>
